--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="author" content="QuranDigital" />
     <meta name="theme-color" content="#d4af37" />
     
+    <meta name="mobile-web-app-capable" content="yes" />
+    
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Quran2025" />
@@ -22,7 +24,6 @@
     <meta property="og:description" content="Aplikasi Islamik PWA lengkap dengan Al-Quran, Waktu Solat, Kiblat, Tasbih dan Doa" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/pwa-512x512.png" />
-
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="QuranDigital 2025" />
     <meta name="twitter:image" content="/pwa-512x512.png" />
